@@ -480,10 +480,10 @@ typedef struct rcoption {
 #define NANO_WRITEOUT_FKEY		KEY_F(3)
 #define NANO_GOTOLINE_KEY		NANO_CONTROL_7
 #define NANO_GOTOLINE_FKEY		KEY_F(13)
-#define NANO_GOTOLINE_ALTKEY		NANO_META_G
+#define NANO_GOTOLINE_METAKEY		NANO_META_G
 #define NANO_GOTODIR_KEY		NANO_CONTROL_7
 #define NANO_GOTODIR_FKEY		KEY_F(13)
-#define NANO_GOTODIR_ALTKEY		NANO_META_G
+#define NANO_GOTODIR_METAKEY		NANO_META_G
 #define NANO_TOGOTOLINE_KEY		NANO_CONTROL_T
 #define NANO_HELP_KEY			NANO_CONTROL_G
 #define NANO_HELP_FKEY			KEY_F(1)
@@ -495,7 +495,7 @@ typedef struct rcoption {
 #define NANO_REGEXP_KEY			NANO_META_R
 #define NANO_REPLACE_KEY		NANO_CONTROL_4
 #define NANO_REPLACE_FKEY		KEY_F(14)
-#define NANO_REPLACE_ALTKEY		NANO_META_R
+#define NANO_REPLACE_METAKEY		NANO_META_R
 #define NANO_TOOTHERSEARCH_KEY		NANO_CONTROL_R
 #define NANO_PREVPAGE_KEY		NANO_CONTROL_Y
 #define NANO_PREVPAGE_FKEY		KEY_F(7)
@@ -504,7 +504,7 @@ typedef struct rcoption {
 #define NANO_CUT_KEY			NANO_CONTROL_K
 #define NANO_CUT_FKEY			KEY_F(9)
 #define NANO_COPY_KEY			NANO_META_CARET
-#define NANO_COPY_ALTKEY		NANO_META_6
+#define NANO_COPY_METAKEY		NANO_META_6
 #define NANO_UNCUT_KEY			NANO_CONTROL_U
 #define NANO_UNCUT_FKEY			KEY_F(10)
 #define NANO_CURSORPOS_KEY		NANO_CONTROL_C
@@ -513,20 +513,20 @@ typedef struct rcoption {
 #define NANO_SPELL_FKEY			KEY_F(12)
 #define NANO_FIRSTLINE_KEY		NANO_PREVPAGE_KEY
 #define NANO_FIRSTLINE_FKEY		NANO_PREVPAGE_FKEY
-#define NANO_FIRSTLINE_ALTKEY		NANO_META_BACKSLASH
-#define NANO_FIRSTLINE_ALTKEY2		NANO_META_PIPE
+#define NANO_FIRSTLINE_METAKEY		NANO_META_BACKSLASH
+#define NANO_FIRSTLINE_METAKEY2		NANO_META_PIPE
 #define NANO_FIRSTFILE_KEY		NANO_FIRSTLINE_KEY
 #define NANO_FIRSTFILE_FKEY		NANO_FIRSTLINE_FKEY
-#define NANO_FIRSTFILE_ALTKEY		NANO_FIRSTLINE_ALTKEY
-#define NANO_FIRSTFILE_ALTKEY2		NANO_FIRSTLINE_ALTKEY2
+#define NANO_FIRSTFILE_METAKEY		NANO_FIRSTLINE_METAKEY
+#define NANO_FIRSTFILE_METAKEY2		NANO_FIRSTLINE_METAKEY2
 #define NANO_LASTLINE_KEY		NANO_NEXTPAGE_KEY
 #define NANO_LASTLINE_FKEY		NANO_NEXTPAGE_FKEY
-#define NANO_LASTLINE_ALTKEY		NANO_META_SLASH
-#define NANO_LASTLINE_ALTKEY2		NANO_META_QUESTION
+#define NANO_LASTLINE_METAKEY		NANO_META_SLASH
+#define NANO_LASTLINE_METAKEY2		NANO_META_QUESTION
 #define NANO_LASTFILE_KEY		NANO_LASTLINE_KEY
 #define NANO_LASTFILE_FKEY		NANO_LASTLINE_FKEY
-#define NANO_LASTFILE_ALTKEY		NANO_LASTLINE_ALTKEY
-#define NANO_LASTFILE_ALTKEY2		NANO_LASTLINE_ALTKEY2
+#define NANO_LASTFILE_METAKEY		NANO_LASTLINE_METAKEY
+#define NANO_LASTFILE_METAKEY2		NANO_LASTLINE_METAKEY2
 #define NANO_REFRESH_KEY		NANO_CONTROL_L
 #define NANO_JUSTIFY_KEY		NANO_CONTROL_J
 #define NANO_JUSTIFY_FKEY		KEY_F(4)
@@ -537,7 +537,7 @@ typedef struct rcoption {
 #define NANO_FORWARD_KEY		NANO_CONTROL_F
 #define NANO_BACK_KEY			NANO_CONTROL_B
 #define NANO_MARK_KEY			NANO_CONTROL_6
-#define NANO_MARK_ALTKEY		NANO_META_A
+#define NANO_MARK_METAKEY		NANO_META_A
 #define NANO_MARK_FKEY			KEY_F(15)
 #define NANO_HOME_KEY			NANO_CONTROL_A
 #define NANO_END_KEY			NANO_CONTROL_E
@@ -552,26 +552,26 @@ typedef struct rcoption {
 #define NANO_APPEND_KEY			NANO_META_A
 #define NANO_PREPEND_KEY		NANO_META_P
 #define NANO_PREVFILE_KEY		NANO_META_LCARET
-#define NANO_PREVFILE_ALTKEY		NANO_META_COMMA
+#define NANO_PREVFILE_METAKEY		NANO_META_COMMA
 #define NANO_NEXTFILE_KEY		NANO_META_RCARET
-#define NANO_NEXTFILE_ALTKEY		NANO_META_PERIOD
+#define NANO_NEXTFILE_METAKEY		NANO_META_PERIOD
 #define NANO_BRACKET_KEY		NANO_META_RBRACKET
 #define NANO_NEXTWORD_KEY		NANO_CONTROL_SPACE
 #define NANO_PREVWORD_KEY		NANO_META_SPACE
 #define NANO_WORDCOUNT_KEY		NANO_META_D
 #define NANO_SCROLLUP_KEY		NANO_META_MINUS
 #define NANO_SCROLLDOWN_KEY		NANO_META_PLUS
-#define NANO_SCROLLUP_ALTKEY		NANO_META_UNDERSCORE
-#define NANO_SCROLLDOWN_ALTKEY		NANO_META_EQUALS
-#define NANO_CUTTILLEND_ALTKEY		NANO_META_T
+#define NANO_SCROLLUP_METAKEY		NANO_META_UNDERSCORE
+#define NANO_SCROLLDOWN_METAKEY		NANO_META_EQUALS
+#define NANO_CUTTILLEND_METAKEY		NANO_META_T
 #define NANO_PARABEGIN_KEY		NANO_CONTROL_W
-#define NANO_PARABEGIN_ALTKEY		NANO_META_LPARENTHESIS
-#define NANO_PARABEGIN_ALTKEY2		NANO_META_9
+#define NANO_PARABEGIN_METAKEY		NANO_META_LPARENTHESIS
+#define NANO_PARABEGIN_METAKEY2		NANO_META_9
 #define NANO_PARAEND_KEY		NANO_CONTROL_O
-#define NANO_PARAEND_ALTKEY		NANO_META_RPARENTHESIS
-#define NANO_PARAEND_ALTKEY2		NANO_META_0
+#define NANO_PARAEND_METAKEY		NANO_META_RPARENTHESIS
+#define NANO_PARAEND_METAKEY2		NANO_META_0
 #define NANO_FULLJUSTIFY_KEY		NANO_CONTROL_U
-#define NANO_FULLJUSTIFY_ALTKEY		NANO_META_J
+#define NANO_FULLJUSTIFY_METAKEY	NANO_META_J
 #define NANO_VERBATIM_KEY		NANO_META_V
 
 /* Toggles do not exist if NANO_TINY is defined. */
